# TOGMB

./: .gitignore  CMakeLists.txt  MathParser.cpp  MathParser.h  README.md  assert.h  compile_commands.json  declarations.h  graphvizTool.cpp  graphvizTool.h  main.cpp  valgrind-out.txt
.cache/clangd/index/: ASTConverter.cpp.D11479AC64353D25.idx  ASTConverter.h.C70DA1EF7BF9DB51.idx  ASTEvaluator.cpp.0326CA77944A0E4B.idx  ASTEvaluator.h.9947F929D7D4B50B.idx  MathParser.cpp.7A5270BA838AAB1B.idx  MathParser.h.DC1AAC88E670D56A.idx  assert.h.0A94D9B3D2AC7A22.idx  base.cpp.423196397B26BEDC.idx  base.h.7956DF35F4C895D2.idx  calculator.cpp.39F0BA3C08E3F106.idx  calculator.h.4908BAD165B3110B.idx  declarations.h.305C00C4F083FE08.idx  functionWindow.cpp.2DF712465BDAC1A4.idx  functionWindow.h.3FA85701A0FC5B4C.idx  grammarStorage.cpp.9726D2FC77056140.idx  grammarStorage.h.A18E7804DB2C8E04.idx  grammarSymbols.h.9279B5899833E966.idx  graphvizTool.cpp.87E8F575F0572F23.idx  graphvizTool.h.C3BB0757E3D4D444.idx  keyboardWindow.cpp.45BDF0C077838A9C.idx  keyboardWindow.h.8533649D0F535002.idx  literalPattern.cpp.F69FBDAB862F8A87.idx  literalPattern.h.5E7AD5BF063DF920.idx  main.cpp.DF6E4270B43A4E23.idx  menu.cpp.17FC841E6A78A0F3.idx  menu.h.224B456FB82ACCEB.idx  moc_base.cpp.FEB150F9833F7BD8.idx  moc_functionWindow.cpp.0B8D301E1EAE4512.idx  moc_keyboardWindow.cpp.D03D97D7C3285A18.idx  moc_menu.cpp.8E392E5C8BB17680.idx  moc_variableWindow.cpp.189219AE1E236220.idx  mocs_compilation.cpp.730D6E6275EE3638.idx  namedPattern.cpp.AEABDAF6F3E59DD2.idx  namedPattern.h.5F0499483CB85E31.idx  numberPattern.cpp.37643A639C9A5607.idx  numberPattern.h.348559BFA99ADD1A.idx  parseTreeNode.cpp.8751449A7AA318EF.idx  parseTreeNode.h.03F91B7EA1D660C9.idx  parser.h.2521AB64F28F9918.idx  parserMatchers.cpp.7FD3E1194F60F9EB.idx  (+18 more)
Extra/Other/: contract.xlsx
calculator/: ASTConverter.cpp  ASTConverter.h  ASTEvaluator.cpp  ASTEvaluator.h  CMakeLists.txt  MathParser.cpp  MathParser.h  calculator.cpp  calculator.h  grammarSymbols.h
files/: base_functions.txt  coolfile.txt  coolfile2.txt  file.txt  func_redef.txt  invalid_func_name.txt  invalid_var_name.txt  nonexisiting_func.txt  nonexisting_var.txt  something.txt  var_redef.txt  wrong_var_amount.txt
gui/: CMakeLists.txt  base.cpp  base.h  base_functions.txt  functionWindow.cpp  functionWindow.h  keyboardWindow.cpp  keyboardWindow.h  menu.cpp  menu.h  variableWindow.cpp  variableWindow.h
logs/: log_Thu_Jan_23_10-35-01_2025.txt  log_Thu_Jan_23_10-36-40_2025.txt  log_Thu_Jan_23_10-47-33_2025.txt  log_Thu_Jan_23_11-55-28_2025.txt  log_Thu_Jan_23_12-02-13_2025.txt
output/: ASTGraph.txt  PTGraph.txt  graph.txt  graph_Thu_Jan_23_12-11-34_2025_success_AST.txt  graph_Thu_Jan_23_12-11-34_2025_success_PT.txt  graph_Thu_Jan_23_13-29-44_2025_AST.txt  graph_Thu_Jan_23_13-32-24_2025_AST.txt  graph_Thu_Jan_23_13-33-47_2025_AST.txt
rats/: CMakeLists.txt  declarations.h  grammarStorage.cpp  grammarStorage.h  graphvizTool.cpp  graphvizTool.h  parseTreeNode.cpp  parseTreeNode.h  parser.h  parserMatchers.cpp  parserRatImpl.cpp  rats.h
rats/ratterns/: CMakeLists.txt  literalPattern.cpp  literalPattern.h  namedPattern.cpp  namedPattern.h  numberPattern.h  pattern.cpp  pattern.h  rankedChoicePattern.cpp  rankedChoicePattern.h  ratterns.cpp  ratterns.h  repeaterPattern.cpp  repeaterPattern.h  sequencePattern.cpp  sequencePattern.h  varNamePattern.cpp  varNamePattern.h  variablePattern.cpp  variablePattern.h
